<resources>
    <string name="app_name">Submission</string>
    <string name="character_name">Nama Karakter</string>
    <string name="character_detail">Detail Karakter</string>
    <string name="nama_profil">Ricky Alturino</string>
    <string name="email_profil">alturino001@gmail.com</string>
    <string name="about">About</string>
    <string name="description_about">Hi Nama Ricky Alturino Saya mahasiswa Universitas Sriwijaya, Fakultas Ilmu Komputer dengan jurusan Teknik Informatika. Saya tertarik untuk meningkatkan pengetahuan dan pemahaman saya pada bidang bahasa pemrograman dan penyelesaian masalah, saya juga tertarik untuk menjadi UI/UX designer untuk Mobile App dan Web serta menjadi developer untuk pembuatan Mobile App dan Web tersebut</string>
    <string name="biography">Biography</string>
    <string name="detail_biography">Detail Biography</string>
    <string name="about_me">About Me</string>
</resources>
